src/layouts/style.scss
@include media-breakpoint-up(md) {
  html,
  body {
    font-size: 1.1rem !important;
    hyphens: auto;
  }
}

p > a,
li > a {
  position: relative;
  font-weight: 400;
  &:after {
    content: '';
    position: absolute;
    left: 0;
    height: 1.2rem;
    width: 100%;
    border-bottom: 1px solid;
    margin-top: 8px;
    opacity: 0;
    transition: 300ms;
    transform: scale(0,1);
  }
  &:hover:after {
    opacity: 1;
    transform: scale(1);
    box-shadow: 0 5px 4px -4px rgba(0, 94, 133, 0.25);
  }
}

.text-white p {
  color: $gray-100;
}

.bg-ledgy {
  background-image: linear-gradient(to right bottom, #053a5e, #005e85, #0086a9, #00afc9);;
}
.nav-link {
  font-size: 0.8em !important;
}
.btn {
  font-size: 0.6em;
  transition: all 0.3s; 
  padding: 7px 21px;
  &:hover {
    box-shadow: 0 12px 24px rgba(0,0,0,0.25), 0 8px 8px rgba(0,0,0,0.22);
    transition: all 0.3s;
    transform: translateZ(10px) scale(1.02) !important;
  }
  &:focus, &:active {
    box-shadow: none !important;
  }
}
.nav-navbar .nav-link,
.btn {
  text-transform: none;
  font-weight: 400;
}
.navbar .btn {
  white-space: nowrap;
}
.stick .btn-outline-light {
  color: $color-primary;
  border-color: $color-primary;
}
.stick .btn-light {
  color: $white;
  background-color: $color-primary;
  border-color: $color-primary;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  hyphens: auto;
}
h1 {
  hyphens: none;
  @include media-breakpoint-down(md) {
    font-size: 2rem;
  }
}

.partner {
  max-width: 960px;

  img {
    margin: 0;
  }
}
.section-header p {
  font-size: inherit;
}
.btn-xl {
  font-weight: 400;
  font-size: 0.8em;
  padding: 10px 30px;
  @include media-breakpoint-down(sm) {
    padding: 10px 15px;
  }
}
.signup {
  max-width: 600px;
}

.imprint h6 {
  margin-bottom: 0;
}
.pricing-3 {
  h6 {
    height: 2rem;
  }
  h4 {
    height: 4.5rem;
  }
  li {
    position: relative;
    height: 3em;
    line-height: 1.2;
  }
}

.team-1 {
  .gatsby-image-wrapper {
    max-width: 245px;
  }
}

.container-small {
  max-width: 760px;
}

.about {
  border-top: 1px solid $gray-200;

  h5 {
    line-height: 0.6;
  }

  .gatsby-image-wrapper {
    width: 85px;
  }
}

.markdown {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-top: 2rem;
  }
  li {
    margin-bottom: 1rem;
  }
  blockquote {
    border-left: map-get($pale-colors, "info") 0.2em solid;
    padding-left: map-get($spacers, 3);
    margin-left: map-get($spacers, 2);
  }
  figure {
    max-width: 600px;
  }
  hr {
    clear: both;
  }
  .katex {
    font-size: 1em;
  }
  .gatsby-highlight {
    margin-top: map-get($spacers, 5);
    margin-bottom: map-get($spacers, 5);
  }
  @include media-breakpoint-down(sm) {
    .katex {
      overflow: scroll;
      padding-bottom: map-get($spacers, 4);
    }
  }
  @include media-breakpoint-up(md) {
    .size-md-small {
      width: 400px;
    }
    .float-md-left {
      margin-left: -2em !important;
      margin-right: 1em !important;
    }
    .float-md-right {
      margin-right: -2em !important;
      margin-left: 1em !important;
    }
  }
}

#tablet-ledgy {
  transition: 200ms;
  margin-left: auto;
  margin-right: auto;
  @include media-breakpoint-up(md) {
    width: 75%;
    margin-top: 2.5%;
  }
  @include media-breakpoint-up(lg) {
    width: 105%;
    margin-top: 15%;
    }
  @include media-breakpoint-up(xl) {
    margin-top: 10%;
    width: 115%;
  }
}

.home-banner {
  @include media-breakpoint-up(xl) {
    @media(orientation:landscape) {
     min-height: 95vh; 
    }
  }
  @media screen and (min-width: 1440px) {
    .container {
      max-width: 1400px;
    }
  }
}

.banner-line-height {
  line-height: 2.4rem;
  @include media-breakpoint-up(xl) {
    line-height: 2.8rem;
  }
}

.adjust-bottom {
  margin-bottom: 1px;
}

@keyframes swinging {
  from { transform: translateX(0px); }
  70%  { transform: translateX(7px); }
  to   { transform: translateX(0px); }    
}

.swinging {  
  animation-name: swinging;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-out;
}

.footer {
  background: linear-gradient(to right bottom, #005e85, #0086a9, #00afc9);
  a {
    margin-bottom: 0.7em;
  }
  .nav-link:hover {
    color: white !important;
  }
}

.social-item:hover {
  box-shadow: 0 12px 24px rgba(0,0,0,0.25), 0 8px 8px rgba(0,0,0,0.22);
}

